--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
-<!DOCTYPE html>
-
-<html lang="en">
+<html>
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-        <link rel="stylesheet" href="style.css">
-        <script src="main.js"></script>
-        </style>
+
+    </head>
     <body>
-        <header>
-            <img src="img/Herunterladen.png" alt="Deutschland F">
-        </header>
-        <div class="center">
-            <p>open live server</p>
-            <p>edit port to public</p>
-        </div>
+        
+        <p>Hallo Welt!</p>
+        <b>bold</b>
+        <i>ilic</i>
+        <h1>H1</h1>
+
+        <u>Underline</u>
+        <sup>sup</sup>
+        <sub>sub</sub>
+        <tt>tt</tt>
+        <p><a href="informatik.html">a</a></p>
+        <p><a href="04Bilder/bildeinfuegen.html">Bilder</a></p>
     </body>
+    
 </html>
