--- a/07Tabellen/weltrangliste.html
+++ b/07Tabellen/weltrangliste.html
@@ -4,17 +4,37 @@
 </head>
 <body>
 
-<h1> FIFA-Weltrangliste der Nationalmannschaften</h1>
-<b> Stand: 3.9.2015</b>
-<p>
-1. Argentinien, 1442 Punkte<p>
-2. Belgien, 1269 Punkte<p>
-3. Deutschland, 1248 Punkte<p>
-4. Kolumbien, 1224 Punkte<p>
-5. Brasilien, 1209 Punkte.<p>
-<hr>
-<h2>Aufgabe</h2>
-Formatiere die obenstehenden Daten in einer HTML-Tabelle.
-
+    <h1> FIFA-Weltrangliste der Nationalmannschaften</h1>
+    <b> Stand: 3.9.2015</b>
+    <hr>
+    <h2>Aufgabe</h2>
+    Formatiere die obenstehenden Daten in einer HTML-Tabelle.
+    <table border="1">
+        <tr>
+            <td>1.</td>
+            <td>Argentinien</td>
+            <td>1442 Punkte</td>
+        </tr>
+        <tr>
+            <td>2.</td>
+            <td>Belgien</td>
+            <td>1269 Punkte</td>
+        </tr>
+        <tr>
+            <td>3.</td> 
+            <td>Deutschland</td>
+            <td>1248 Punkte</td>
+        </tr>
+        <tr>
+            <td>4.</td>
+            <td>Kolumbien</td> 
+            <td>1224 Punkte</td>
+        </tr>
+        <tr>
+            <td>5.</td>
+            <td>Brasilien</td>
+            <td>1209 Punkte.</td>
+        </tr>
+    </table>
 </body>
 </html>
