--- a/07Tabellen/weltrangliste.html
+++ b/07Tabellen/weltrangliste.html
@@ -33,7 +33,7 @@
         <tr>
             <td>5.</td>
             <td>Brasilien</td>
-            <td>1209 Punkte.</td>
+            <td>1209 Punkte</td>
         </tr>
     </table>
 </body>
