--- a/07Tabellen/1test.html
+++ b/07Tabellen/1test.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        td {
+            border-width: 2px;
+            border-style: inset;
+        }
+    </style>
 </head>
 <body>
-    <table id="plan" border="1"></table>
+    <div id="plan"></div>
     <script src="main.js"></script>
 </body>
 </html>
