--- a/07Tabellen/1test.html
+++ b/07Tabellen/1test.html
@@ -8,11 +8,15 @@
         td {
             border-width: 2px;
             border-style: inset;
+            text-align: center;
+            width: 100px;
         }
+        
     </style>
 </head>
 <body>
-    <div id="plan"></div>
+    <table id="plan"></table>
+    <button onclick="addElement()" >refresh</button>
     <script src="main.js"></script>
 </body>
 </html>
